--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <hr/>
         <img src="./Purva's image.jpg " height="300"  alt ="purva" />
         <hr/>
-        <h1><a href="./contact.html">Contact Details</a></h1>        
+           
+        <footer>
+           <p><a href="./hobbies.html">My Hobbies</a></p> 
+           <p> <a href="./contact.html">Contact Details</a></p> 
+            
+
+        </footer>
     </body>
 </head>
